--- a/Resources/Language/English.xaml
+++ b/Resources/Language/English.xaml
@@ -68,6 +68,7 @@
     <system:String x:Key="Show Ping">Show Ping</system:String>
     <system:String x:Key="Show Drawings">Show Drawings</system:String>
     <system:String x:Key="Send Anonymous Assembly Statistics">Send Anonymous Assembly Statistics</system:String>
+    <system:String x:Key="Always Inject Default Profile">Always Inject Default Profile</system:String>
     <system:String x:Key="Display Enemy Tower Range">Display enemy tower range</system:String>
     <system:String x:Key="Extended Zoom">Extended Zoom</system:String>
     <system:String x:Key="UpdateOnStart">Update assemblies on start</system:String>
