--- a/Views/UpdateWindow.xaml
+++ b/Views/UpdateWindow.xaml
@@ -2,20 +2,28 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                      Title="{DynamicResource UpdatingLeagueSharp}" 
-                      Height="233" 
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      mc:Ignorable="d"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:views="clr-namespace:LeagueSharp.Loader.Views"
+                      d:DataContext="{d:DesignInstance Type=views:UpdateWindow, IsDesignTimeCreatable=True}"
+                      Title="{DynamicResource UpdatingLeagueSharp}"
+                      Height="233"
                       Width="388.99"
-                      ResizeMode="NoResize" 
-                      WindowStartupLocation="CenterScreen" 
-                      Activated="UpdateWindow_OnActivated"
+                      ResizeMode="NoResize"
+                      WindowStartupLocation="CenterScreen"
                       BorderThickness="1"
                       ShowCloseButton="False"
                       Icon="../Resources/icon_64x64.ico"
                       ShowIconOnTitleBar="False"
+                      Topmost="True"
                       BorderBrush="DeepSkyBlue">
     <Grid>
-        <ProgressBar Margin="10,0,10,61" Height="30" RenderTransformOrigin="0.5,0.5" x:Name="UpdateProgressBar" VerticalAlignment="Bottom" />
-        <Label Foreground="Gray" FontSize="50" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="{DynamicResource Updating}" Margin="0,10,0,96"/>
-        <Label x:Name="ProgressLabel" Content="{DynamicResource UpdateWaiting}" Margin="10,0,10,10" Height="31" VerticalAlignment="Bottom" />
+        <ProgressBar Margin="10,0,10,61" Height="30" RenderTransformOrigin="0.5,0.5" x:Name="UpdateProgressBar"
+                     VerticalAlignment="Bottom" />
+        <Label Foreground="Gray" FontSize="40" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+               Content="{Binding UpdateMessage}" Margin="0,10,0,96" />
+        <Label Content="{Binding ProgressText}" Margin="10,0,10,10" Height="31"
+               VerticalAlignment="Bottom" />
     </Grid>
 </Controls:MetroWindow>
