--- a/Resources/Language/Chinese.xaml
+++ b/Resources/Language/Chinese.xaml
@@ -1,6 +1,6 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:system="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <!-- MainWindow TopBar -->
     <system:String x:Key="Website">网站</system:String>
@@ -28,11 +28,11 @@
     <system:String x:Key="MenuShare">分享 </system:String>
     <system:String x:Key="MenuViewLog">查看日志</system:String>
 
-	<!-- MainWindow Profiles Menu -->
+    <!-- MainWindow Profiles Menu -->
     <system:String x:Key="NewProfile">新的</system:String>
     <system:String x:Key="ChangeName">更改名称</system:String>
     <system:String x:Key="DeleteProfile">删除</system:String>
-	
+
     <!-- MainWindow Buttons -->
     <system:String x:Key="AcceptTosButton">我同意</system:String>
     <system:String x:Key="DeclineTosButton">我不同意</system:String>
@@ -77,7 +77,7 @@
     <system:String x:Key="DefaultHotkeys">恢复</system:String>
     <system:String x:Key="Language">语言</system:String>
     <system:String x:Key="Color">界面颜色</system:String>
-	
+
     <!-- Settings Hotkeys -->
     <system:String x:Key="Hotkeys">热键</system:String>
     <system:String x:Key="Hotkey">热键</system:String>
@@ -121,7 +121,7 @@
     <system:String x:Key="SuccessfullyInstalled">选定脚本安装成功</system:String>
     <system:String x:Key="ErrorInstalling">在安装某个脚本时发生了一个错误，请检查日志，获取更多信息</system:String>
 
-   <system:String x:Key="EnableDeveloper">启用开发者选项</system:String>
+    <system:String x:Key="EnableDeveloper">启用开发者选项</system:String>
     <system:String x:Key="Developer">开发者</system:String>
     <system:String x:Key="New">新</system:String>
     <system:String x:Key="Edit">修改</system:String>
