--- a/Resources/Language/English.xaml
+++ b/Resources/Language/English.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:system="clr-namespace:System;assembly=mscorlib">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <!-- MainWindow TopBar -->
     <system:String x:Key="Website">Website</system:String>
@@ -28,11 +28,11 @@
     <system:String x:Key="MenuShare">Share</system:String>
     <system:String x:Key="MenuViewLog">View Log</system:String>
 
-	<!-- MainWindow Profiles Menu -->
+    <!-- MainWindow Profiles Menu -->
     <system:String x:Key="NewProfile">New</system:String>
     <system:String x:Key="ChangeName">Change Name</system:String>
     <system:String x:Key="DeleteProfile">Delete</system:String>
-	
+
     <!-- MainWindow Buttons -->
     <system:String x:Key="AcceptTosButton">I Accept</system:String>
     <system:String x:Key="DeclineTosButton">I Decline</system:String>
@@ -72,12 +72,14 @@
     <system:String x:Key="Display Enemy Tower Range">Display enemy tower range</system:String>
     <system:String x:Key="Extended Zoom">Extended Zoom</system:String>
     <system:String x:Key="UpdateOnStart">Update assemblies on start</system:String>
+    <system:String x:Key="UpdateCoreOnInject">Update Core on Inject</system:String>
+
     <system:String x:Key="Inject">Inject</system:String>
     <system:String x:Key="Logout">Logout</system:String>
     <system:String x:Key="DefaultHotkeys">Restore</system:String>
-	<system:String x:Key="Language">Language</system:String>
+    <system:String x:Key="Language">Language</system:String>
     <system:String x:Key="Color">Color</system:String>
-	
+
     <!-- Settings Hotkeys -->
     <system:String x:Key="Hotkeys">Hotkeys</system:String>
     <system:String x:Key="Hotkey">Hotkey</system:String>
@@ -126,18 +128,18 @@
     <system:String x:Key="New">New</system:String>
     <system:String x:Key="Edit">Edit</system:String>
     <system:String x:Key="Clone">Clone</system:String>
-    
-	<system:String x:Key="Checking">Checking...</system:String>
+
+    <system:String x:Key="Checking">Checking...</system:String>
     <system:String x:Key="Updated">Updated</system:String>
     <system:String x:Key="OUTDATED">OUTDATED</system:String>
-	<system:String x:Key="Unknown">Unknown</system:String>
-	<system:String x:Key="UpdateStatus">Status</system:String>
-	
-	<system:String x:Key="LoaderUpdateFailed">Could not download the update, please update manually. Error: </system:String>
+    <system:String x:Key="Unknown">Unknown</system:String>
+    <system:String x:Key="UpdateStatus">Status</system:String>
+
+    <system:String x:Key="LoaderUpdateFailed">Could not download the update, please update manually. Error: </system:String>
     <system:String x:Key="LeagueNotFound">Could not resolve "League of Legends.exe" location, try starting a custom game.</system:String>
     <system:String x:Key="UpdateSuccess">LeagueSharp has successfully updated for the installed League of Legends version.</system:String>
     <system:String x:Key="UpdateUnknown">Couldn't determine if LeagueSharp is updated for the local League Of Legends version, this usually means that www.joduska.me is inaccessible.</system:String>
-	<system:String x:Key="NotUpdateNeeded">LeagueSharp is updated for the installed League of Legends version.</system:String>
+    <system:String x:Key="NotUpdateNeeded">LeagueSharp is updated for the installed League of Legends version.</system:String>
     <system:String x:Key="RandomizationFailed">Could not randomize the dll names.</system:String>
-    
+
 </ResourceDictionary>
