--- a/Resources/Language/Latvian.xaml
+++ b/Resources/Language/Latvian.xaml
@@ -1,6 +1,6 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:system="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <!-- MainWindow TopBar -->
     <system:String x:Key="Website">Mājaslapa</system:String>
@@ -28,11 +28,11 @@
     <system:String x:Key="MenuShare">Dalīties</system:String>
     <system:String x:Key="MenuViewLog">Apskatīt Log</system:String>
 
-	<!-- MainWindow Profiles Menu -->
+    <!-- MainWindow Profiles Menu -->
     <system:String x:Key="NewProfile">Jauns</system:String>
     <system:String x:Key="ChangeName">Mainīt nosaukumu</system:String>
     <system:String x:Key="DeleteProfile">Dzēst</system:String>
-	
+
     <!-- MainWindow Buttons -->
     <system:String x:Key="AcceptTosButton">Piekrītu</system:String>
     <system:String x:Key="DeclineTosButton">Nepiekrītu</system:String>
@@ -71,9 +71,9 @@
     <system:String x:Key="Inject">Inject</system:String>
     <system:String x:Key="Logout">Izlogoties</system:String>
     <system:String x:Key="DefaultHotkeys">Atjaunot</system:String>
-	<system:String x:Key="Language">Valoda</system:String>
+    <system:String x:Key="Language">Valoda</system:String>
     <system:String x:Key="Color">Color</system:String>
-	
+
     <!-- Settings Hotkeys -->
     <system:String x:Key="Hotkeys">Ātrās pogas</system:String>
     <system:String x:Key="Hotkey">Ātrā poga</system:String>
@@ -122,17 +122,17 @@
     <system:String x:Key="New">Jauns</system:String>
     <system:String x:Key="Edit">Rediģēt</system:String>
     <system:String x:Key="Clone">Klonot</system:String>
-    
-	<system:String x:Key="Checking">Pārbauda...</system:String>
+
+    <system:String x:Key="Checking">Pārbauda...</system:String>
     <system:String x:Key="Updated">Atjaunots</system:String>
     <system:String x:Key="OUTDATED">NOVECOJIS</system:String>
-	<system:String x:Key="Unknown">Nezināms</system:String>
-	<system:String x:Key="UpdateStatus">Status</system:String>
-	
-	<system:String x:Key="LoaderUpdateFailed">Nevārēja nolādēt atjauninājumu. Errors : </system:String>
+    <system:String x:Key="Unknown">Nezināms</system:String>
+    <system:String x:Key="UpdateStatus">Status</system:String>
+
+    <system:String x:Key="LoaderUpdateFailed">Nevārēja nolādēt atjauninājumu. Errors : </system:String>
     <system:String x:Key="LeagueNotFound">Nevarēja atrast "League of Legends.exe" atrašanās vietu, izmēģiniet uzsākt custom spēli.</system:String>
     <system:String x:Key="UpdateSuccess">LeagueSharp ir veiksmīgi atjaunināts jaunākajai League of Legends versijai.</system:String>
     <system:String x:Key="UpdateUnknown">Nevarēja noteikt vai LeagueSharp ir atjaunināts ieinstalētajai League Of Legends versijai, tas parasti nozīmē to, ka www.joduska.me nav sasniedzams.</system:String>
-	<system:String x:Key="NotUpdateNeeded">LeagueSharp ir atjaunots jaunākajai League of Legends versijai.</system:String>
+    <system:String x:Key="NotUpdateNeeded">LeagueSharp ir atjaunots jaunākajai League of Legends versijai.</system:String>
     <system:String x:Key="RandomizationFailed">Could not randomize the dll names.</system:String>
 </ResourceDictionary>
