--- a/Resources/Language/Korean.xaml
+++ b/Resources/Language/Korean.xaml
@@ -15,13 +15,13 @@
 
     <!-- MainWindow Assemblies datagrid columns -->
     <system:String x:Key="ColumnName">이름</system:String>
-    <system:String x:Key="ColumnType">종류</system:String>
+    <system:String x:Key="ColumnType">타입</system:String>
     <system:String x:Key="ColumnVersion">버전</system:String>
     <system:String x:Key="ColumnLocation">위치</system:String>
     <system:String x:Key="ColumnDescription">설명</system:String>
 
     <!-- MainWindow Assemblies datagrid Menu -->
-    <system:String x:Key="MenuUpdateAndCompile">업데이트, 컴파일</system:String>
+    <system:String x:Key="MenuUpdateAndCompile">업데이트 후 컴파일</system:String>
     <system:String x:Key="MenuRemove">삭제</system:String>
     <system:String x:Key="MenuGithub">GitHub</system:String>
     <system:String x:Key="MenuGithubAssemblies">GitHub 어셈블리</system:String>
@@ -29,7 +29,7 @@
     <system:String x:Key="MenuViewLog">로그 보기</system:String>
 
     <!-- MainWindow Profiles Menu -->
-    <system:String x:Key="NewProfile">새로 만들기</system:String>
+    <system:String x:Key="NewProfile">새 프로필</system:String>
     <system:String x:Key="ChangeName">이름 바꾸기</system:String>
     <system:String x:Key="DeleteProfile">삭제</system:String>
 
@@ -41,7 +41,7 @@
     <system:String x:Key="InstallNewAssembly">새로운 어셈블리 설치</system:String>
 
     <!-- InstallerWindow Title -->
-    <system:String x:Key="AssemblyInstaller">어셈블리 설치기</system:String>
+    <system:String x:Key="AssemblyInstaller">어셈블리 인스톨러</system:String>
 
     <!-- InstallerWindow Tabs -->
     <system:String x:Key="Search">찾기</system:String>
@@ -49,9 +49,9 @@
 
     <!-- InstallerWindow Search tab -->
     <system:String x:Key="SelectAssembliesText">어셈블리 위치 선택:</system:String>
-    <system:String x:Key="Local">로컬 (PC)</system:String>
+    <system:String x:Key="Local">내 컴퓨터</system:String>
     <system:String x:Key="Github">GitHub</system:String>
-    <system:String x:Key="Installed">이미 설치됨</system:String>
+    <system:String x:Key="Installed">설치된 어셈블리</system:String>
     <system:String x:Key="Next">다음</system:String>
 
     <!-- InstallerWindow Select tab -->
@@ -63,14 +63,20 @@
     <!-- Settings General -->
     <system:String x:Key="General">일반</system:String>
     <system:String x:Key="GameSettings">게임 설정</system:String>
-    <system:String x:Key="Anti-AFK">자리비움 경고, 강제종료 무시</system:String>
+    <system:String x:Key="Anti-AFK">Anti-AFK (자리비움 경고, 강제종료 무시)</system:String>
     <system:String x:Key="Debug Console">디버그 콘솔</system:String>
-    <system:String x:Key="Display Enemy Tower Range">타워 공격범위 표시</system:String>
-    <system:String x:Key="Extended Zoom">시야범위 확장 (줌핵)</system:String>
-    <system:String x:Key="UpdateOnStart">시작할 때 어셈블리 업데이트</system:String>
+    <system:String x:Key="Show Ping">핑 표시</system:String>
+    <system:String x:Key="Show Drawings">범위 표시</system:String>
+    <system:String x:Key="Send Anonymous Assembly Statistics">익명으로 어셈블리 통계 전송</system:String>
+    <system:String x:Key="Always Inject Default Profile">기본 프로필만 인젝트</system:String>
+    <system:String x:Key="Display Enemy Tower Range">포탑 사거리 표시</system:String>
+    <system:String x:Key="Extended Zoom">시야범위 확장</system:String>
+    <system:String x:Key="UpdateOnStart">프로그램 실행시 어셈블리 업데이트</system:String>
+    <system:String x:Key="UpdateCoreOnInject">인젝트시 코어 업데이트</system:String>
+
     <system:String x:Key="Inject">인젝트</system:String>
     <system:String x:Key="Logout">로그아웃</system:String>
-    <system:String x:Key="DefaultHotkeys">기본 값</system:String>
+    <system:String x:Key="DefaultHotkeys">기본 단축키</system:String>
     <system:String x:Key="Language">언어</system:String>
     <system:String x:Key="Color">색상</system:String>
 
@@ -78,9 +84,9 @@
     <system:String x:Key="Hotkeys">단축키</system:String>
     <system:String x:Key="Hotkey">단축키</system:String>
     <system:String x:Key="Reload the assemblies">어셈블리 다시 불러오기</system:String>
-    <system:String x:Key="Recompile and reload the assemblies">어셈블리 리컴파일 후 다시 불러오기</system:String>
-    <system:String x:Key="Shows the menu (Press)">메뉴 보이기 (누르기)</system:String>
-    <system:String x:Key="Shows the menu (Toggle)">메뉴 보이기 (토글)</system:String>
+    <system:String x:Key="Recompile and reload the assemblies">어셈블리 컴파일 후 다시 불러오기</system:String>
+    <system:String x:Key="Shows the menu (Press)">메뉴 표시 (누르기)</system:String>
+    <system:String x:Key="Shows the menu (Toggle)">메뉴 표시 (토글)</system:String>
 
     <!-- Settings Log -->
     <system:String x:Key="Log">로그</system:String>
@@ -92,30 +98,30 @@
     <!-- UpdateWindow -->
     <system:String x:Key="UpdatingLeagueSharp">LeagueSharp 업데이트</system:String>
     <system:String x:Key="Updating">업데이트 중...</system:String>
-    <system:String x:Key="UpdateWaiting">기다려주세요...</system:String>
-    <system:String x:Key="UpdateText">{1} KB 중 {0} KB 다운로드됨.</system:String>
+    <system:String x:Key="UpdateWaiting">기다려 주세요...</system:String>
+    <system:String x:Key="UpdateText">{0}/{1} KB 다운로드 됨.</system:String>
 
     <!-- Errors and other strings -->
-    <system:String x:Key="WrongAuth">존재하지 않는 아이디거나 비밀번호가 일치하지 않습니다. {0} 에서 회원가입 해주세요.</system:String>
-    <system:String x:Key="AuthEmpty">아이디나 비밀번호가 비어있습니다.</system:String>
-    <system:String x:Key="FailedToDelete">업데이트 파일을 삭제할 수 없습니다, 수동으로 삭제하고 LeagueSharp을 재실행 하시기바랍니다.</system:String>
-    <system:String x:Key="WrongVersion">리그오브레전드의 버전을 지원하지 않습니다. 이것은 일반적으로 LeagueSharp이 최신버전이 아님을 의미합니다. 자세한 정보는 포럼을 확인하시고, LeagueSharp의 최신버전을 기다려주시기 바랍니다. 해쉬: </system:String>
+    <system:String x:Key="WrongAuth">아이디 또는 비밀번호를 다시 확인하세요. {0} 에서 회원가입 할 수 있습니다.</system:String>
+    <system:String x:Key="AuthEmpty">아이디 또는 비밀번호가 비어있습니다.</system:String>
+    <system:String x:Key="FailedToDelete">업데이트 파일을 삭제할 수 없습니다. 삭제 후 LeagueSharp를 재실행 하세요.</system:String>
+    <system:String x:Key="WrongVersion">LeagueSharp를 사용할 수 없는 버전이거나, LeagueSharp가 최신버전이 아닙니다. 자세한 정보는 포럼을 확인하세요. 해쉬 : </system:String>
     <system:String x:Key="FailedToDownload">다운로드 실패.</system:String>
     <system:String x:Key="FailedToLogin">로그인 실패: {0}</system:String>
     <system:String x:Key="Login">로그인</system:String>
-    <system:String x:Key="LoginError">{0}(으)로 로그인 할 수 없습니다: {1}</system:String>
-    <system:String x:Key="Uninstall">삭제</system:String>
-    <system:String x:Key="UninstallConfirm">정말로 선택한 어셈블리를 삭제하시겠습니까?</system:String>
-    <system:String x:Key="ConfigWriteError">config.xml을 작성 할 수 없습니다.</system:String>
+    <system:String x:Key="LoginError">{0}(으)로 로그인 실패: {1}</system:String>
+    <system:String x:Key="Uninstall">제거</system:String>
+    <system:String x:Key="UninstallConfirm">정말 선택한 어셈블리를 제거하겠습니까?</system:String>
+    <system:String x:Key="ConfigWriteError">config.xml을 작성할 수 없습니다.</system:String>
     <system:String x:Key="ShareText">어셈블리 URL을 클립보드에 복사했습니다.</system:String>
     <system:String x:Key="LogNotFound">로그파일이 없습니다.</system:String>
     <system:String x:Key="NewProfile2">새로운 프로필</system:String>
     <system:String x:Key="Rename">이름 바꾸기</system:String>
     <system:String x:Key="RenameText">새로운 프로필의 이름을 입력해주세요.</system:String>
-    <system:String x:Key="DownloadingData">필수데이터 다운로드중.</system:String>
-    <system:String x:Key="Installer">설치기</system:String>
+    <system:String x:Key="DownloadingData">필수 데이터 다운로드 중.</system:String>
+    <system:String x:Key="Installer">인스톨러</system:String>
     <system:String x:Key="SuccessfullyInstalled">선택한 어셈블리가 설치되었습니다.</system:String>
-    <system:String x:Key="ErrorInstalling">일부 어셈블리를 설치하는데 오류가 발생했습니다. 자세한 정보는 로그를 확인해주세요.</system:String>
+    <system:String x:Key="ErrorInstalling">일부 어셈블리를 설치하는데 오류가 발생했습니다. 로그 기록을 확인해주세요.</system:String>
 
     <system:String x:Key="EnableDeveloper">개발자 옵션 활성화</system:String>
     <system:String x:Key="Developer">개발자</system:String>
@@ -123,16 +129,17 @@
     <system:String x:Key="Edit">편집</system:String>
     <system:String x:Key="Clone">복제</system:String>
 
-    <system:String x:Key="Checking">확인중...</system:String>
-    <system:String x:Key="Updated">최신버전</system:String>
-    <system:String x:Key="OUTDATED">구버전</system:String>
+    <system:String x:Key="Checking">확인 중...</system:String>
+    <system:String x:Key="Updated">사용 가능</system:String>
+    <system:String x:Key="OUTDATED">사용 불가</system:String>
     <system:String x:Key="Unknown">알 수 없음</system:String>
     <system:String x:Key="UpdateStatus">상태</system:String>
 
-    <system:String x:Key="LoaderUpdateFailed">업데이트를 다운로드 할 수 없습니다. 직접 업데이트 해주세요. 에러:</system:String>
-    <system:String x:Key="LeagueNotFound">"League of Legends.exe"의 위치를 찾을 수 없습니다. 커스텀 게임을 시작해주세요. (리그오브레전드 클라이언트가 실행되면 리그샵이 "League of Legends.exe"의 위치를 자동으로 감지합니다.)</system:String>
-    <system:String x:Key="UpdateSuccess">LeagueSharp이 설치되어있는 리그오브레전드의 버전을 위한 최신버전으로 성공적이게 업데이트 되었습니다.</system:String>
-    <system:String x:Key="UpdateUnknown">LeagueSharp이 설치되어있는 리그오브레전드의 버전을 위한 최신버전인지 확인 할 수 없습니다. 이것은 일반적으로 'www.joduska.me'에 접속 할 수 없음을 의미합니다.</system:String>
-    <system:String x:Key="NotUpdateNeeded">이미 LeagueSharp이 설치되어있는 리그오브레전드의 버전을 위한 최신버전입니다.</system:String>
+    <system:String x:Key="LoaderUpdateFailed">업데이트를 다운로드 할 수 없습니다. 직접 업데이트 해주세요. Error: </system:String>
+    <system:String x:Key="LeagueNotFound">"League of Legends.exe"의 위치를 찾을 수 없습니다. 사용자 설정 게임을 시작해주세요.</system:String>
+    <system:String x:Key="UpdateSuccess">LeagueSharp가 설치된 리그오브레전드 버전에 맞게 성공적으로 업데이트 되었습니다.</system:String>
+    <system:String x:Key="UpdateUnknown">'www.joduska.me'에 접속 할 수 없어서 LeagueSharp가 설치되어있는 리그오브레전드에 맞는 버전인지 확인 할 수 없습니다.</system:String>
+    <system:String x:Key="NotUpdateNeeded">LeagueSharp가 사용 가능합니다.</system:String>
     <system:String x:Key="RandomizationFailed">dll 이름을 무작위화 할 수 없습니다.</system:String>
+
 </ResourceDictionary>
