--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -126,6 +126,91 @@
 
     <Grid>
         <TabControl Margin="3,-36,3,3" x:Name="MainTabControl">
+            <TabControl.Resources>
+                <Controls:SplitButton x:Key="SharedProfilesButton"
+                        IsTextSearchEnabled="True"
+                        Width="171"
+                        Height="23"
+                        SelectedItem="{Binding Config.SelectedProfile, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        ItemsSource="{Binding Config.Profiles, UpdateSourceTrigger=PropertyChanged}"
+                        DisplayMemberPath="Name"
+                        VerticalAlignment="Top" Margin="10,10,0,0" HorizontalAlignment="Left"
+                        SelectionChanged="ProfilesButton_OnSelectionChanged"
+                        MouseDoubleClick="ProfilesButton_OnMouseDoubleClick" SelectedIndex="0">
+                    <Controls:SplitButton.Icon>
+                        <Canvas Margin="5,10,0,10"
+                                    Width="16"
+                                    Height="16"
+                                    VerticalAlignment="Center">
+                            <Path Canvas.Left="0"
+                                      Canvas.Top="0"
+                                      Width="16"
+                                      Height="16"
+                                      Data="F1 M 38,19C 43.5417,19 45.9167,22.1667 45.1174,28.8134C 45.8315,29.2229 46.3125,29.9928 46.3125,30.875C 46.3125,31.9545 45.5923,32.8658 44.6061,33.1546C 44.1941,34.623 43.5543,35.9229 42.75,36.9628L 42.75,41.9583C 45.3889,42.4861 47.5,42.75 50.6667,44.3333C 53.8333,45.9167 54.8889,47.3681 57,49.4792L 57,57L 19,57L 19,49.4792C 21.1111,47.3681 22.1667,45.9167 25.3333,44.3333C 28.5,42.75 30.6111,42.4861 33.25,41.9583L 33.25,36.9628C 32.4457,35.9229 31.8059,34.623 31.3939,33.1546C 30.4077,32.8658 29.6875,31.9545 29.6875,30.875C 29.6875,29.9928 30.1685,29.2229 30.8826,28.8134C 30.0833,22.1667 32.4583,19 38,19 Z "
+                                      Fill="{DynamicResource BlackBrush}"
+                                      Stretch="Fill" />
+                        </Canvas>
+                    </Controls:SplitButton.Icon>
+                    <Controls:SplitButton.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="{DynamicResource NewProfile}" Click="NewProfileMenuItem_OnClick">
+                                <MenuItem.Icon>
+                                    <Canvas Width="10"
+                                                Height="15"
+                                                Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+                                        <Path Canvas.Left="0"
+                                                  Canvas.Top="0"
+                                                  Width="15"
+                                                  Height="15"
+                                                  Data="F1 M 35,19L 41,19L 41,35L 57,35L 57,41L 41,41L 41,57L 35,57L 35,41L 19,41L 19,35L 35,35L 35,19 Z "
+                                                  Fill="{DynamicResource BlackBrush}"
+                                                  Stretch="Fill" />
+                                    </Canvas>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="{DynamicResource ChangeName}" Click="EditProfileMenuItem_OnClick">
+                                <MenuItem.Icon>
+                                    <Canvas Width="10"
+                                                Height="15"
+                                                Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+                                        <Path Canvas.Left="0"
+                                                  Canvas.Top="0"
+                                                  Width="15"
+                                                  Height="15"
+                                                  Data="F1 M 53.2929,21.2929L 54.7071,22.7071C 56.4645,24.4645 56.4645,27.3137 54.7071,29.0711L 52.2323,31.5459L 44.4541,23.7677L 46.9289,21.2929C 48.6863,19.5355 51.5355,19.5355 53.2929,21.2929 Z M 31.7262,52.052L 23.948,44.2738L 43.0399,25.182L 50.818,32.9601L 31.7262,52.052 Z M 23.2409,47.1023L 28.8977,52.7591L 21.0463,54.9537L 23.2409,47.1023 Z "
+                                                  Fill="{DynamicResource BlackBrush}"
+                                                  Stretch="Fill" />
+                                    </Canvas>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="{DynamicResource DeleteProfile}"
+                                          Click="RemoveProfileMenuItem_OnClick">
+                                <MenuItem.Icon>
+                                    <Canvas Width="10"
+                                                Height="15"
+                                                Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+                                        <Path Canvas.Left="0"
+                                                  Canvas.Top="0"
+                                                  Width="15"
+                                                  Height="15"
+                                                  Data="F1 M 25.3333,23.75L 50.6667,23.75C 51.5411,23.75 51.8541,27.3125 51.8541,27.3125L 24.1458,27.3125C 24.1458,27.3125 24.4589,23.75 25.3333,23.75 Z M 35.625,19.7917L 40.375,19.7917C 40.8122,19.7917 41.9583,20.9378 41.9583,21.375C 41.9583,21.8122 40.8122,22.9584 40.375,22.9584L 35.625,22.9584C 35.1878,22.9584 34.0416,21.8122 34.0416,21.375C 34.0416,20.9378 35.1878,19.7917 35.625,19.7917 Z M 27.7083,28.5L 48.2916,28.5C 49.1661,28.5 49.875,29.2089 49.875,30.0834L 48.2916,53.8334C 48.2916,54.7078 47.5828,55.4167 46.7083,55.4167L 29.2917,55.4167C 28.4172,55.4167 27.7083,54.7078 27.7083,53.8334L 26.125,30.0834C 26.125,29.2089 26.8339,28.5 27.7083,28.5 Z M 30.0833,31.6667L 30.4792,52.25L 33.25,52.25L 32.8542,31.6667L 30.0833,31.6667 Z M 36.4167,31.6667L 36.4167,52.25L 39.5833,52.25L 39.5833,31.6667L 36.4167,31.6667 Z M 43.1458,31.6667L 42.75,52.25L 45.5208,52.25L 45.9167,31.6667L 43.1458,31.6667 Z "
+                                                  Fill="{DynamicResource BlackBrush}"
+                                                  Stretch="Fill" />
+                                    </Canvas>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                        </ContextMenu>
+                    </Controls:SplitButton.ContextMenu>
+                </Controls:SplitButton>
+                <Style x:Key="LoadSharedProfilesButtonStyle" TargetType="{x:Type ContentControl}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=TabItem}, Path=IsSelected}"
+                                         Value="True">
+                            <Setter Property="Content" Value="{StaticResource SharedProfilesButton}"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TabControl.Resources>
             <TabItem x:Name="TosTabItem" Height="36" VerticalAlignment="Top" Visibility="Visible" IsHitTestVisible="False">
                 <Grid Background="#FFE5E5E5">
                     <WebBrowser x:Name="TosBrowser" Visibility="Visible" Margin="10,10,10,32"
@@ -354,85 +439,7 @@
                                                 Binding="{Binding Description, UpdateSourceTrigger=PropertyChanged}" />
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Controls:SplitButton
-                        x:Name="ProfilesButton"
-                        IsTextSearchEnabled="True"
-                        Width="171"
-                        Height="23"
-                        SelectedItem="{Binding Config.SelectedProfile, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                        ItemsSource="{Binding Config.Profiles, UpdateSourceTrigger=PropertyChanged}"
-                        DisplayMemberPath="Name"
-                        VerticalAlignment="Top" Margin="10,10,0,0" HorizontalAlignment="Left"
-                        SelectionChanged="ProfilesButton_OnSelectionChanged"
-                        MouseDoubleClick="ProfilesButton_OnMouseDoubleClick" SelectedIndex="0">
-                        <Controls:SplitButton.Icon>
-                            <Canvas Margin="5,10,0,10"
-                                    Width="16"
-                                    Height="16"
-                                    VerticalAlignment="Center">
-                                <Path Canvas.Left="0"
-                                      Canvas.Top="0"
-                                      Width="16"
-                                      Height="16"
-                                      Data="F1 M 38,19C 43.5417,19 45.9167,22.1667 45.1174,28.8134C 45.8315,29.2229 46.3125,29.9928 46.3125,30.875C 46.3125,31.9545 45.5923,32.8658 44.6061,33.1546C 44.1941,34.623 43.5543,35.9229 42.75,36.9628L 42.75,41.9583C 45.3889,42.4861 47.5,42.75 50.6667,44.3333C 53.8333,45.9167 54.8889,47.3681 57,49.4792L 57,57L 19,57L 19,49.4792C 21.1111,47.3681 22.1667,45.9167 25.3333,44.3333C 28.5,42.75 30.6111,42.4861 33.25,41.9583L 33.25,36.9628C 32.4457,35.9229 31.8059,34.623 31.3939,33.1546C 30.4077,32.8658 29.6875,31.9545 29.6875,30.875C 29.6875,29.9928 30.1685,29.2229 30.8826,28.8134C 30.0833,22.1667 32.4583,19 38,19 Z "
-                                      Fill="{DynamicResource BlackBrush}"
-                                      Stretch="Fill" />
-                            </Canvas>
-                        </Controls:SplitButton.Icon>
-                        <Controls:SplitButton.ContextMenu>
-                            <ContextMenu>
-                                <MenuItem Header="{DynamicResource NewProfile}" Click="NewProfileMenuItem_OnClick">
-                                    <MenuItem.Icon>
-                                        <Canvas Width="10"
-                                                Height="15"
-                                                Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
-                                            <Path Canvas.Left="0"
-                                                  Canvas.Top="0"
-                                                  Width="15"
-                                                  Height="15"
-                                                  Data="F1 M 35,19L 41,19L 41,35L 57,35L 57,41L 41,41L 41,57L 35,57L 35,41L 19,41L 19,35L 35,35L 35,19 Z "
-                                                  Fill="{DynamicResource BlackBrush}"
-                                                  Stretch="Fill" />
-                                        </Canvas>
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header="{DynamicResource ChangeName}" Click="EditProfileMenuItem_OnClick">
-                                    <MenuItem.Icon>
-                                        <Canvas Width="10"
-                                                Height="15"
-                                                Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
-                                            <Path Canvas.Left="0"
-                                                  Canvas.Top="0"
-                                                  Width="15"
-                                                  Height="15"
-                                                  Data="F1 M 53.2929,21.2929L 54.7071,22.7071C 56.4645,24.4645 56.4645,27.3137 54.7071,29.0711L 52.2323,31.5459L 44.4541,23.7677L 46.9289,21.2929C 48.6863,19.5355 51.5355,19.5355 53.2929,21.2929 Z M 31.7262,52.052L 23.948,44.2738L 43.0399,25.182L 50.818,32.9601L 31.7262,52.052 Z M 23.2409,47.1023L 28.8977,52.7591L 21.0463,54.9537L 23.2409,47.1023 Z "
-                                                  Fill="{DynamicResource BlackBrush}"
-                                                  Stretch="Fill" />
-                                        </Canvas>
-                                    </MenuItem.Icon>
-                                </MenuItem>
-
-                                <MenuItem Header="{DynamicResource DeleteProfile}"
-                                          Click="RemoveProfileMenuItem_OnClick">
-                                    <MenuItem.Icon>
-                                        <Canvas Width="10"
-                                                Height="15"
-                                                Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
-                                            <Path Canvas.Left="0"
-                                                  Canvas.Top="0"
-                                                  Width="15"
-                                                  Height="15"
-                                                  Data="F1 M 25.3333,23.75L 50.6667,23.75C 51.5411,23.75 51.8541,27.3125 51.8541,27.3125L 24.1458,27.3125C 24.1458,27.3125 24.4589,23.75 25.3333,23.75 Z M 35.625,19.7917L 40.375,19.7917C 40.8122,19.7917 41.9583,20.9378 41.9583,21.375C 41.9583,21.8122 40.8122,22.9584 40.375,22.9584L 35.625,22.9584C 35.1878,22.9584 34.0416,21.8122 34.0416,21.375C 34.0416,20.9378 35.1878,19.7917 35.625,19.7917 Z M 27.7083,28.5L 48.2916,28.5C 49.1661,28.5 49.875,29.2089 49.875,30.0834L 48.2916,53.8334C 48.2916,54.7078 47.5828,55.4167 46.7083,55.4167L 29.2917,55.4167C 28.4172,55.4167 27.7083,54.7078 27.7083,53.8334L 26.125,30.0834C 26.125,29.2089 26.8339,28.5 27.7083,28.5 Z M 30.0833,31.6667L 30.4792,52.25L 33.25,52.25L 32.8542,31.6667L 30.0833,31.6667 Z M 36.4167,31.6667L 36.4167,52.25L 39.5833,52.25L 39.5833,31.6667L 36.4167,31.6667 Z M 43.1458,31.6667L 42.75,52.25L 45.5208,52.25L 45.9167,31.6667L 43.1458,31.6667 Z "
-                                                  Fill="{DynamicResource BlackBrush}"
-                                                  Stretch="Fill" />
-                                        </Canvas>
-                                    </MenuItem.Icon>
-                                </MenuItem>
-                            </ContextMenu>
-                        </Controls:SplitButton.ContextMenu>
-                    </Controls:SplitButton>
-
+                    <ContentControl Style="{StaticResource LoadSharedProfilesButtonStyle}"/>
                     <Button x:Name="InstallButton" Content="{DynamicResource InstallNewAssembly}" Margin="0,0,10,10"
                             Click="InstallButton_Click" HorizontalAlignment="Right" Width="181" Height="25"
                             VerticalAlignment="Bottom" />
@@ -461,6 +468,7 @@
             </TabItem>
             <TabItem x:Name="AssemblyDB" Header="AssembyDB" Height="36" VerticalAlignment="Top">
                 <Grid Background="#FFE5E5E5">
+                    <ContentControl Style="{StaticResource LoadSharedProfilesButtonStyle}"/>
                     <TextBox x:Name="DBSearchTextBox" Height="23" Margin="0,10,10,0" TextWrapping="Wrap"
                              VerticalAlignment="Top" TextChanged="DBTextBoxBase_OnTextChanged"
                              HorizontalAlignment="Right" Width="181" />
