--- a/Resources/Language/English.xaml
+++ b/Resources/Language/English.xaml
@@ -83,7 +83,9 @@
     <system:String x:Key="Extended Zoom">Extended Zoom</system:String>
     <system:String x:Key="UpdateOnStart">Update assemblies on start</system:String>
     <system:String x:Key="UpdateCoreOnInject">Update Core on Inject</system:String>
-    <system:String x:Key="EnableDebug">Enable Assembly Debug</system:String>
+    <system:String x:Key="EnableDebug">Enable Assembly Debug (may decrease performance)</system:String>
+
+    <system:String x:Key="CloudConfig">Use Cloud Integration</system:String>
     
 
     <system:String x:Key="Inject">Inject</system:String>
